# gemini-translate-cli

./: CLAUDE.md  README.md  justfile  pyproject.toml
src/gemini_translate/: cli.py
